--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ description = "SQL-like shell for Apache Kudu (Incubating)"
 keywords = ["kudu", "database"]
 
 [dependencies]
+chrono = "0.2"
 docopt = "0.6"
-kudu = { git = "https://github.com/danburkert/kudu-rs" }
+kudu = { path = "../kudu-rs" }
 libc = "0.2"
 linenoise-rust = "0.1"
 rustc-serialize = "0.3"
