--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "SQL-like shell for Apache Kudu (Incubating)"
 keywords = ["kudu", "database"]
 
 [dependencies]
+chrono = "0.2"
 docopt = "0.6"
 kudu = { git = "https://github.com/danburkert/kudu-rs" }
 libc = "0.2"
