--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["kudu", "database"]
 [dependencies]
 chrono = "0.2"
 docopt = "0.6"
+itertools = "0.4"
 kudu = { git = "https://github.com/danburkert/kudu-rs" }
 libc = "0.2"
 linenoise-rust = "0.1"
