--- a/.travis.yml
+++ b/.travis.yml
@@ -87,8 +87,8 @@ branches:
     # Pushes and PR to the master branch
     - master
     # IMPORTANT Ruby regex to match tags. Required, or travis won't trigger deploys when a new tag
-    # is pushed. This regex matches semantic versions like 1.2.3-rc4+2016.02.22
-    - /^\d+\.\d+\.\d+.*$/
+    # is pushed. This regex matches semantic versions like v1.2.3-rc4+2016.02.22
+    - /^v\d+\.\d+\.\d+.*$/
 
 notifications:
   email:
