--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,18 @@ keywords = ["kudu", "database", "sql"]
 panic = "abort"
 
 [dependencies]
-chrono = "0.2"
-docopt = "0.6"
+chrono = "0.4"
+docopt = "1"
 either = "1"
-env_logger = "0.4"
-itertools = "0.5"
-kudu = { git = "https://github.com/danburkert/kudu-rs" }
+env_logger = "0.5"
+futures = "0.1"
+itertools = "0.7"
+#kudu = { git = "https://github.com/danburkert/kudu-rs", branch = "futures-wip" }
+kudu = { path = "../kudu-rs" }
 libc = "0.2"
-rustc-serialize = "0.3"
 rustyline = "1.0"
-term = "0.4"
+serde = "1"
+serde_derive = "1"
+term = "0.5"
+tokio = "0.1"
 xdg-basedir = "1"
